Removed unnecessary console.log statements. Allocated more space in CSS for job timing information to avoid line wrapping.

--- a/src/css/job-card.css
+++ b/src/css/job-card.css
@@ -62,7 +62,7 @@
     grid-area: job-card-details;
     display: grid;
     grid-template-areas: "job-card-customer job-card-status";
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 40% 60%;
 }
 
 .job-card-customer {
